--- a/WeatherLive.Client/Views/Home/Index.cshtml
+++ b/WeatherLive.Client/Views/Home/Index.cshtml
@@ -1,8 +1,19 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Weather Live";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<main class="main-container">
+    <div class="title display-4 text-center">
+        Weather Live
+    </div>
+
+    <div class="app d-flex justify-content-center">
+        <div class="weather-container border border-1 border-white">
+            <form class="border border-2">
+                <input />
+
+                <button>Search</button>
+            </form>
+        </div>
+    </div>
+</main>
