--- a/WeatherLive.Client/Views/Home/Index.cshtml
+++ b/WeatherLive.Client/Views/Home/Index.cshtml
@@ -14,6 +14,10 @@
 
                 <button>Search</button>
             </form>
+
+            <div class="output-container">
+
+            </div>
         </div>
     </div>
 </main>
